# android-keyboard

./: .gitattributes  .gitignore  .gitmodules  backup.txt  gradle.properties  settings.gradle.kts
.github/workflows/: android-release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/macro/: MainActivity.kt  Unhide.kt  UsbPermissionReceiver.kt
app/src/main/java/com/example/macro/capture/: CaptureThread.kt
app/src/main/java/com/example/macro/grpc/: GrpcMain.kt  GrpcService.kt  InputService.kt  RestartService.kt  VideoService.kt
app/src/main/java/com/example/macro/handler/: UsbDeviceHandler.kt  UsbHandler.kt  UsbKeyboardHandler.kt
app/src/main/java/com/example/macro/keyboard/: GattServerService.java
app/src/main/java/com/example/macro/macro/: KeyboardMacro.kt
app/src/main/java/com/example/macro/service/: CubeService.kt
app/src/main/java/com/example/macro/test/: UsbHelper.java
app/src/main/java/com/example/macro/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/proto/: video_service.proto
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle  build_host_tools.bat  build_host_tools.sh  clear_build.bat
opencv/libcxx_helper/: CMakeLists.txt  CaptureThread.cpp  CaptureThread.h  GrpcServer.cpp  GrpcServer.h  jni_helper.cpp  jni_helper.h
opencv/libcxx_helper/grpc/: GrpcServer.cpp  GrpcServer.h  InputService.cpp  InputService.h  RestartService.cpp  RestartService.h  VideoService.cpp  VideoService.h
opencv/libcxx_helper/jvm/: JvmManager.cpp  JvmManager.h
opencv/libcxx_helper/service/: CubeService.cpp  CubeService.h
opencv/libs/libuvccamera/: build.gradle.kts  libuvccamera-release.aar
opencv/native/jni/include/google/protobuf/: descriptor.cc  descriptor_unittest.cc
opencv/native/jni/include/google/protobuf/compiler/: annotation_test_util.cc  command_line_interface.cc  command_line_interface.h  command_line_interface_unittest.cc  importer.cc  main.cc  plugin.cc  plugin.h  subprocess.h  zip_output_unittest.sh
opencv/native/jni/include/google/protobuf/compiler/cpp/: file.cc  generator.cc  plugin_unittest.cc
opencv/native/jni/include/google/protobuf/compiler/csharp/: csharp_helpers.cc  csharp_helpers.h  csharp_source_generator_base.cc
opencv/native/jni/include/google/protobuf/compiler/java/: file.cc  helpers.cc  options.h  plugin_unittest.cc
opencv/native/jni/include/google/protobuf/compiler/objectivec/: objectivec_file.cc  objectivec_generator.cc  objectivec_helpers.cc
opencv/native/jni/include/google/protobuf/compiler/python/: generator.cc  plugin_unittest.cc
opencv/native/jni/include/google/protobuf/compiler/ruby/: ruby_generator_unittest.cc
opencv/native/jni/include/google/protobuf/stubs/: common.h
opencv/native/jni/include/libuvc/: libuvc.h
opencv/proto/: video_service.proto
